--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@zeit/next-sass": "^1.0.1",
+    "@zeit/next-typescript": "^1.1.1",
+    "component-playground": "^3.2.1",
+    "isomorphic-unfetch": "^3.0.0",
     "next": "9.1.5",
+    "node-sass": "^4.13.0",
     "react": "16.12.0",
-    "react-dom": "16.12.0"
+    "react-dom": "16.12.0",
+    "react-syntax-highlighter": "^12.2.1",
+    "url-loader": "^3.0.0"
   }
 }
