--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
-    "component-playground": "^3.2.1",
+    "babel-plugin-import": "^1.13.0",
+    "babel-plugin-styled-components": "^1.10.6",
     "isomorphic-unfetch": "^3.0.0",
     "next": "9.1.5",
     "node-sass": "^4.13.0",
+    "prismjs": "^1.17.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
-    "react-syntax-highlighter": "^12.2.1",
+    "styled-components": "^4.4.1",
     "url-loader": "^3.0.0"
   }
 }
