--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prismjs": "^1.17.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
+    "smooth-scroll": "^16.1.0",
     "styled-components": "^4.4.1",
     "url-loader": "^3.0.0"
   }
