--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
+    "axios": "^0.19.0",
     "babel-plugin-styled-components": "^1.10.6",
     "isomorphic-unfetch": "^3.0.0",
     "next": "9.1.5",
