--- a/package.json
+++ b/package.json
@@ -3,23 +3,36 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "dev": "node server.js",
+    "build": "next build && next export",
+    "start": "NODE_ENV=production node server.js"
   },
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
     "axios": "^0.19.0",
     "babel-plugin-styled-components": "^1.10.6",
+    "compression": "^1.7.4",
+    "config": "^3.2.4",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "firebase": "^7.6.1",
     "isomorphic-unfetch": "^3.0.0",
-    "next": "9.1.5",
+    "mongoose": "^5.8.3",
+    "next": "^9.1.6",
+    "next-offline": "^4.0.6",
     "node-sass": "^4.13.0",
     "prismjs": "^1.17.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "smooth-scroll": "^16.1.0",
     "styled-components": "^4.4.1",
-    "url-loader": "^3.0.0"
+    "url-loader": "^3.0.0",
+    "webpack": "^4.41.4"
+  },
+  "devDependencies": {
+    "@types/mongoose": "^5.5.36",
+    "@types/react": "^16.9.17",
+    "typescript": "^3.7.4"
   }
 }
