--- a/package.json
+++ b/package.json
@@ -5,24 +5,19 @@
   "scripts": {
     "dev": "node server.js",
     "build": "next build && next export",
-    "start": "NODE_ENV=production node server.js"
+    "start": "cross-env NODE_ENV=production node server.js"
   },
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
     "axios": "^0.19.0",
     "babel-plugin-styled-components": "^1.10.6",
-    "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
-    "config": "^3.2.4",
     "cors": "^2.8.5",
+    "cross-env": "^6.0.3",
     "express": "^4.17.1",
-    "express-validator": "^6.3.1",
     "firebase": "^7.6.1",
-    "isomorphic-unfetch": "^3.0.0",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.8.3",
-    "next": "^9.1.6",
+    "next": "canary",
     "next-offline": "^4.0.6",
     "node-sass": "^4.13.0",
     "prismjs": "^1.17.1",
