--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "smooth-scroll": "^16.1.0",
+    "spdy": "^4.0.1",
     "styled-components": "^4.4.1",
     "url-loader": "^3.0.0",
     "webpack": "^4.41.4"
