--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,9 +1,23 @@
 {
-  "short_name": "Samyao",
-  "name": "Samyao",
-  "icon":{
-
+  "short_name": "Sam Yao",
+  "name": "Sam Yao Web Blog",
+  "icon":[
+    {
+      "src":"/favicon.ico",
+      "sizes":"16x16 32x32",
+      "type":"image/x-icon"
+    },
+    {
+      "src": "/android-chrome-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
   },
+  {
+      "src": "/android-chrome-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+  }
+  ],
   "start_url": "/",
   "display": "standalone",
   "theme_color": "#000000",
