--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "node server.js",
+    "dev": "node server.tsx",
     "build": "next build",
-    "start": "cross-env NODE_ENV=production node server.js"
+    "start": "cross-env NODE_ENV=production node server.tsx"
   },
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
@@ -13,23 +13,26 @@
     "axios": "^0.19.0",
     "babel-plugin-styled-components": "^1.10.6",
     "compression": "^1.7.4",
-    "cors": "^2.8.5",
     "cross-env": "^6.0.3",
     "express": "^4.17.1",
     "firebase": "^7.6.1",
-    "next": "canary",
+    "next": "^9.2.0",
     "next-offline": "^4.0.6",
     "node-sass": "^4.13.0",
     "prismjs": "^1.17.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "smooth-scroll": "^16.1.0",
-    "spdy": "^4.0.1",
     "styled-components": "^4.4.1",
-    "url-loader": "^3.0.0",
-    "webpack": "^4.41.4"
+    "url-loader": "^3.0.0"
   },
   "devDependencies": {
+    "@types/compression": "^1.0.1",
+    "@types/express": "^4.17.2",
     "@types/mongoose": "^5.5.36",
     "@types/react": "^16.9.17",
     "typescript": "^3.7.4"
