--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "node server.tsx",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "cross-env NODE_ENV=production node server.tsx"
+    "start": "cross-env NODE_ENV=production node server.js"
   },
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
