--- a/public/static/manifest.json
+++ b/public/static/manifest.json
@@ -3,17 +3,17 @@
   "name": "Sam Yao Web Blog",
   "icon":[
     {
-      "src":"/static/favicon.ico",
+      "src":"./favicon.ico",
       "sizes":"16x16 32x32",
       "type":"image/x-icon"
     },
     {
-      "src": "/static/android-chrome-192x192.png",
+      "src": "./android-chrome-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
   },
   {
-      "src": "/static/android-chrome-512x512.png",
+      "src": "./android-chrome-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
   }
