--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@zeit/next-typescript": "^1.1.1",
     "axios": "^0.19.0",
     "babel-plugin-styled-components": "^1.10.6",
+    "ckeditor4-react": "^1.0.1",
     "compression": "^1.7.4",
     "cross-env": "^6.0.3",
     "express": "^4.17.1",
