--- a/now.json
+++ b/now.json
@@ -2,7 +2,7 @@
   "routes": [
       {
         "src": "/service-worker.js",
-        "dest": "/www/_next/static/service-worker.js",
+        "dest": "./.next/static/service-worker.js",
         "headers": {
           "cache-control": "public, max-age=43200, immutable",
           "Service-Worker-Allowed": "/"
