--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "node server.js",
+    "dev": "node server.js --use-strict",
     "build": "next build",
     "start": "cross-env NODE_ENV=production node server.js"
   },
