--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "node server.js --use-strict",
     "build": "next build",
-    "start": "cross-env NODE_ENV=production node server.js"
+    "start": "cross-env NODE_ENV=production node server.js --use-strict"
   },
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
@@ -23,8 +23,6 @@
     "prismjs": "^1.17.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
-    "react-redux": "^7.1.3",
-    "redux": "^4.0.5",
     "smooth-scroll": "^16.1.0",
     "styled-components": "^4.4.1",
     "url-loader": "^3.0.0"
