--- a/package.json
+++ b/package.json
@@ -13,12 +13,10 @@
     "axios": "^0.19.0",
     "babel-plugin-styled-components": "^1.10.6",
     "ckeditor4-react": "^1.0.1",
-    "compression": "^1.7.4",
-    "cross-env": "^6.0.3",
     "express": "^4.17.1",
     "firebase": "^7.6.1",
     "next": "^9.2.0",
-    "next-offline": "^4.0.6",
+    "next-pwa": "^2.2.0",
     "node-sass": "^4.13.0",
     "prismjs": "^1.17.1",
     "react": "16.12.0",
