--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,52 +3,52 @@
   "short_name": "samyao website",
   "icon": [
     {
-      "src": "https://www.yaobaiyang.com/favicon.ico",
+      "src": "./favicon.ico",
       "sizes": "16x16 32x32",
       "type": "image/x-icon"
     },
     {
-      "src": "https://www.yaobaiyang.com/icon-72x72.png",
+      "src": "./icon-72x72.png",
       "sizes": "72x72",
       "type": "image/png"
     },
     {
-      "src": "https://www.yaobaiyang.com/icon-96x96.png",
+      "src": "./icon-96x96.png",
       "sizes": "96x96",
       "type": "image/png"
     },
     {
-      "src": "https://www.yaobaiyang.com/icon-128x128.png",
+      "src": "./icon-128x128.png",
       "sizes": "128x128",
       "type": "image/png"
     },
     {
-      "src": "https://www.yaobaiyang.com/icon-144x144.png",
+      "src": "./icon-144x144.png",
       "sizes": "144x144",
       "type": "image/png"
     },
     {
-      "src": "https://www.yaobaiyang.com/icon-152x152.png",
+      "src": "./icon-152x152.png",
       "sizes": "152x152",
       "type": "image/png"
     },
     {
-      "src": "https://www.yaobaiyang.com/icon-192x192.png",
+      "src": "./icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "https://www.yaobaiyang.com/icon-384x384.png",
+      "src": "./icon-384x384.png",
       "sizes": "384x384",
       "type": "image/png"
     },
     {
-      "src": "https://www.yaobaiyang.com/icon-512x512.png",
+      "src": "./icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     },
     {
-      "src": "https://www.yaobaiyang.com/icon-1024x1024.png",
+      "src": "./icon-1024x1024.png",
       "sizes": "1024x1024",
       "type": "image/png"
     }
