--- a/now.json
+++ b/now.json
@@ -28,7 +28,7 @@
         },
         {
           "key": "Content-Security-Policy",
-          "value": "default-src 'self' *.yaobaiyang.com; script-src 'self' *.yaobaiyang.com"
+          "value": "default-src '*'; script-src 'self' nextbananaboom.herokuapp.com"
         }
       ]
     }
