--- a/now.json
+++ b/now.json
@@ -28,7 +28,7 @@
         },
         {
           "key": "Content-Security-Policy",
-          "value": "default-src * ; script-src 'self' nextbananaboom.herokuapp.com;style-src * 'unsafe-inline'; font-src 'self'; img-src 'self'"
+          "value": "default-src * 'unsafe-inline'; script-src 'self' nextbananaboom.herokuapp.com;style-src * 'unsafe-inline';"
         }
       ]
     }
