--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "next-pwa": "^2.2.0",
     "node-sass": "^4.13.0",
     "prismjs": "^1.17.1",
-    "react": "16.12.0",
-    "react-dom": "16.12.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "smooth-scroll": "^16.1.0",
     "styled-components": "^4.4.1",
     "url-loader": "^3.0.0"
